--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = terminus-font
-url = https://sourceforge.net/projects/terminus-font/files/terminus-font-4.46/terminus-font-4.46.tar.gz
+url = https://sourceforge.net/projects/terminus-font/files/terminus-font-4.47/terminus-font-4.47.tar.gz
 archives = 
 giturl = 
 
@@ -17,8 +17,12 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
@@ -43,6 +47,8 @@ skip_tests = false
 so_to_lib = false
 # configure build for avx2
 use_avx2 = false
+# configure build for avx512
+use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
