--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = terminus-font
-url = https://sourceforge.net/projects/terminus-font/files/terminus-font-4.48/terminus-font-4.48.tar.gz
+url = https://sourceforge.net/projects/terminus-font/files/terminus-font-4.49/terminus-font-4.49.1.tar.gz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,12 +39,16 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
